--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="video">Video</string>
     <string name="account">Account</string>
 
+    <string name="invite">Invite Friends</string>
+    <string name="friend">Friends List</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="video_component_tag">video_container</string>
