--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,13 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="video_component_tag">video_container</string>
     <string name="file_provider_authority" translatable="false">tv.merabihar.app.merabihar.fileprovider</string>
+
+
+    <array name="nav_user">
+        <item>Check-In</item>
+        <item>Friends List</item>
+        <item>Influencer Program</item>
+        <item>Logout</item>
+    </array>
+
 </resources>
