--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="invite">Invite Friends</string>
     <string name="friend">Friends List</string>
 
+    <string name="for_you">For You</string>
+    <string name="follow">Follow</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="video_component_tag">video_container</string>
