influencer pgm detail screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,6 @@ MERA BIHAR is not responsible in any circumstances for any third party, which re
 Recommendations &amp; Updations: Any suggestions &amp; updations regarding the privacy policy or any other questions &amp; views to update the policy will be appreciated in this case you may contact us.\n\n
 We respect the intention and purpose for which our clients submit any personal data. In accordance with our policy, we will not use any information for any means other than stated or implied (i.e., customer care, technical support, account management, etc.).\n\n
 </string>
+    <string name="withdraw">Withdraw</string>
 
 </resources>
