--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
 
     <array name="nav_user">
         <!--<item>Check-In</item>-->
+        <item>Time Watched</item>
         <item>Friends List</item>
         <item>Influencer Program</item>
         <item>Logout</item>
