--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,15 @@
         <item>Logout</item>
     </array>
 
+    <array name="nav_user_refer">
+        <!--<item>Check-In</item>-->
+        <item>Time Watched</item>
+        <item>Redeem Referral Code</item>
+        <item>Friends List</item>
+        <item>Influencer Program</item>
+        <item>Logout</item>
+    </array>
+
     <string name="term_policy">MERA BIHAR is committed to respecting and protecting the privacy of others. We pledge to guard your personal information in accordance with our privacy policy and respect the confidentiality of all visitor or subscriber data submitted to Mera Bihar Mobile Application.\n\n
 Sharing of Information MERA BIHAR will not disclose or share any information pertaining to sub-merchants to any other organization at any time unless the sub-merchant authorizes it.\n\n
 We share the personal information of customers like name, company name, address, telephone no, E-mail address only for our records purpose which is used later in the processing of the order, communicating with customers.\n\n
