--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@ We respect the intention and purpose for which our clients submit any personal d
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_display_message">My Message</string>
     <string name="google_play_not_available">Google Play Services not available</string>
-    <string name="youtube_upload_started">YouTube Direct Lite upload started</string>
+    <string name="youtube_upload_started">Mera Bihar upload started</string>
     <string name="connection_to_google_play_failed">Connection to Play Services failed.</string>
     <string name="youtube_upload">YouTube upload</string>
     <string name="not_signed_in">Not signed in</string>
